--- a/files/clubs/styles.css
+++ b/files/clubs/styles.css
@@ -16,18 +16,19 @@
   position:absolute;
   z-index:0;
 }
-#u303 {
+#u248 {
   position:fixed;
   left:50%;
   margin-left:-512px;
   top:0px;
 }
-#u303_state0 {
+#u248_state0 {
   position:relative;
   left:0px;
   top:0px;
   width:1024px;
   height:50px;
+  background-color:rgba(215, 215, 215, 1);
   background-image:none;
   border:none;
   border-radius:0px;
@@ -35,7 +36,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u303_state0_content {
+#u248_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -43,7 +44,7 @@
   width:1px;
   height:1px;
 }
-#u304_div {
+#u249_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -58,7 +59,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u304 {
+#u249 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -67,20 +68,20 @@
   height:50px;
   display:flex;
 }
-#u304 .text {
+#u249 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u304_text {
+#u249_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u305_img {
+#u250_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -88,7 +89,7 @@
   width:68px;
   height:35px;
 }
-#u305 {
+#u250 {
   border-width:0px;
   position:absolute;
   left:15px;
@@ -97,20 +98,20 @@
   height:35px;
   display:flex;
 }
-#u305 .text {
+#u250 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u305_text {
+#u250_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u306_div {
+#u251_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -129,7 +130,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u306 {
+#u251 {
   border-width:0px;
   position:absolute;
   left:934px;
@@ -142,19 +143,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u306 .text {
+#u251 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u306_text {
+#u251_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u307_div {
+#u252_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -173,7 +174,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u307 {
+#u252 {
   border-width:0px;
   position:absolute;
   left:671px;
@@ -186,19 +187,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u307 .text {
+#u252 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u307_text {
+#u252_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u308_div {
+#u253_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -217,7 +218,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u308 {
+#u253 {
   border-width:0px;
   position:absolute;
   left:753px;
@@ -230,19 +231,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u308 .text {
+#u253 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u308_text {
+#u253_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u309_div {
+#u254_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -261,7 +262,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u309 {
+#u254 {
   border-width:0px;
   position:absolute;
   left:817px;
@@ -274,19 +275,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u309 .text {
+#u254 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u309_text {
+#u254_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u310_div {
+#u255_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -305,7 +306,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u310 {
+#u255 {
   border-width:0px;
   position:absolute;
   left:876px;
@@ -318,19 +319,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u310 .text {
+#u255 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u310_text {
+#u255_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u312_div {
+#u257_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -345,7 +346,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u312 {
+#u257 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -354,20 +355,20 @@
   height:100px;
   display:flex;
 }
-#u312 .text {
+#u257 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u312_text {
+#u257_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u313_div {
+#u258_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -385,7 +386,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u313 {
+#u258 {
   border-width:0px;
   position:absolute;
   left:20px;
@@ -397,19 +398,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u313 .text {
+#u258 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u313_text {
+#u258_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u314_div {
+#u259_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -427,7 +428,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u314 {
+#u259 {
   border-width:0px;
   position:absolute;
   left:935px;
@@ -439,19 +440,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u314 .text {
+#u259 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u314_text {
+#u259_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u315_div {
+#u260_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -469,7 +470,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u315 {
+#u260 {
   border-width:0px;
   position:absolute;
   left:948px;
@@ -481,19 +482,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u315 .text {
+#u260 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u315_text {
+#u260_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u316_div {
+#u261_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -512,7 +513,7 @@
   font-style:normal;
   text-align:right;
 }
-#u316 {
+#u261 {
   border-width:0px;
   position:absolute;
   left:884px;
@@ -525,19 +526,19 @@
   font-style:normal;
   text-align:right;
 }
-#u316 .text {
+#u261 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u316_text {
+#u261_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u317_div {
+#u262_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -555,7 +556,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u317 {
+#u262 {
   border-width:0px;
   position:absolute;
   left:434px;
@@ -567,14 +568,14 @@
   font-weight:700;
   font-style:normal;
 }
-#u317 .text {
+#u262 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u317_text {
+#u262_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
