--- a/files/leauge_of_legends/styles.css
+++ b/files/leauge_of_legends/styles.css
@@ -16,18 +16,19 @@
   position:absolute;
   z-index:0;
 }
-#u192 {
+#u137 {
   position:fixed;
   left:50%;
   margin-left:-512px;
   top:0px;
 }
-#u192_state0 {
+#u137_state0 {
   position:relative;
   left:0px;
   top:0px;
   width:1024px;
   height:50px;
+  background-color:rgba(215, 215, 215, 1);
   background-image:none;
   border:none;
   border-radius:0px;
@@ -35,7 +36,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u192_state0_content {
+#u137_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -43,7 +44,7 @@
   width:1px;
   height:1px;
 }
-#u193_div {
+#u138_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -58,7 +59,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u193 {
+#u138 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -67,20 +68,20 @@
   height:50px;
   display:flex;
 }
-#u193 .text {
+#u138 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u193_text {
+#u138_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u194_img {
+#u139_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -88,7 +89,7 @@
   width:68px;
   height:35px;
 }
-#u194 {
+#u139 {
   border-width:0px;
   position:absolute;
   left:15px;
@@ -97,20 +98,20 @@
   height:35px;
   display:flex;
 }
-#u194 .text {
+#u139 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u194_text {
+#u139_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u195_div {
+#u140_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -129,7 +130,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u195 {
+#u140 {
   border-width:0px;
   position:absolute;
   left:934px;
@@ -142,19 +143,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u195 .text {
+#u140 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u195_text {
+#u140_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u196_div {
+#u141_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -173,7 +174,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u196 {
+#u141 {
   border-width:0px;
   position:absolute;
   left:671px;
@@ -186,19 +187,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u196 .text {
+#u141 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u196_text {
+#u141_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u197_div {
+#u142_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -217,7 +218,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u197 {
+#u142 {
   border-width:0px;
   position:absolute;
   left:753px;
@@ -230,19 +231,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u197 .text {
+#u142 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u197_text {
+#u142_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u198_div {
+#u143_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -261,7 +262,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u198 {
+#u143 {
   border-width:0px;
   position:absolute;
   left:817px;
@@ -274,19 +275,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u198 .text {
+#u143 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u198_text {
+#u143_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u199_div {
+#u144_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -305,7 +306,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u199 {
+#u144 {
   border-width:0px;
   position:absolute;
   left:876px;
@@ -318,19 +319,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u199 .text {
+#u144 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u199_text {
+#u144_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u201_div {
+#u146_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -345,7 +346,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u201 {
+#u146 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -354,20 +355,20 @@
   height:100px;
   display:flex;
 }
-#u201 .text {
+#u146 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u201_text {
+#u146_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u202_div {
+#u147_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -385,7 +386,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u202 {
+#u147 {
   border-width:0px;
   position:absolute;
   left:20px;
@@ -397,19 +398,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u202 .text {
+#u147 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u202_text {
+#u147_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u203_div {
+#u148_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -427,7 +428,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u203 {
+#u148 {
   border-width:0px;
   position:absolute;
   left:935px;
@@ -439,19 +440,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u203 .text {
+#u148 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u203_text {
+#u148_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u204_div {
+#u149_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -469,7 +470,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u204 {
+#u149 {
   border-width:0px;
   position:absolute;
   left:948px;
@@ -481,19 +482,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u204 .text {
+#u149 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u204_text {
+#u149_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u205_div {
+#u150_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -512,7 +513,7 @@
   font-style:normal;
   text-align:right;
 }
-#u205 {
+#u150 {
   border-width:0px;
   position:absolute;
   left:884px;
@@ -525,19 +526,19 @@
   font-style:normal;
   text-align:right;
 }
-#u205 .text {
+#u150 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u205_text {
+#u150_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u206_div {
+#u151_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -556,7 +557,7 @@
   font-style:normal;
   text-align:center;
 }
-#u206 {
+#u151 {
   border-width:0px;
   position:absolute;
   left:273px;
@@ -569,14 +570,14 @@
   font-style:normal;
   text-align:center;
 }
-#u206 .text {
+#u151 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u206_text {
+#u151_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
