--- a/files/teams/styles.css
+++ b/files/teams/styles.css
@@ -16,18 +16,19 @@
   position:absolute;
   z-index:0;
 }
-#u101 {
+#u46 {
   position:fixed;
   left:50%;
   margin-left:-512px;
   top:0px;
 }
-#u101_state0 {
+#u46_state0 {
   position:relative;
   left:0px;
   top:0px;
   width:1024px;
   height:50px;
+  background-color:rgba(215, 215, 215, 1);
   background-image:none;
   border:none;
   border-radius:0px;
@@ -35,7 +36,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u101_state0_content {
+#u46_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -43,7 +44,7 @@
   width:1px;
   height:1px;
 }
-#u102_div {
+#u47_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -58,7 +59,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u102 {
+#u47 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -67,20 +68,20 @@
   height:50px;
   display:flex;
 }
-#u102 .text {
+#u47 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u102_text {
+#u47_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u103_img {
+#u48_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -88,7 +89,7 @@
   width:68px;
   height:35px;
 }
-#u103 {
+#u48 {
   border-width:0px;
   position:absolute;
   left:15px;
@@ -97,20 +98,20 @@
   height:35px;
   display:flex;
 }
-#u103 .text {
+#u48 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u103_text {
+#u48_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u104_div {
+#u49_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -129,7 +130,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u104 {
+#u49 {
   border-width:0px;
   position:absolute;
   left:934px;
@@ -142,19 +143,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u104 .text {
+#u49 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u104_text {
+#u49_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u105_div {
+#u50_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -173,7 +174,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u105 {
+#u50 {
   border-width:0px;
   position:absolute;
   left:671px;
@@ -186,19 +187,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u105 .text {
+#u50 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u105_text {
+#u50_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u106_div {
+#u51_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -217,7 +218,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u106 {
+#u51 {
   border-width:0px;
   position:absolute;
   left:753px;
@@ -230,19 +231,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u106 .text {
+#u51 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u106_text {
+#u51_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u107_div {
+#u52_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -261,7 +262,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u107 {
+#u52 {
   border-width:0px;
   position:absolute;
   left:817px;
@@ -274,19 +275,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u107 .text {
+#u52 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u107_text {
+#u52_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u108_div {
+#u53_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -305,7 +306,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u108 {
+#u53 {
   border-width:0px;
   position:absolute;
   left:876px;
@@ -318,19 +319,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u108 .text {
+#u53 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u108_text {
+#u53_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u110_div {
+#u55_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -345,7 +346,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u110 {
+#u55 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -354,20 +355,20 @@
   height:100px;
   display:flex;
 }
-#u110 .text {
+#u55 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u110_text {
+#u55_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u111_div {
+#u56_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -385,7 +386,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u111 {
+#u56 {
   border-width:0px;
   position:absolute;
   left:20px;
@@ -397,19 +398,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u111 .text {
+#u56 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u111_text {
+#u56_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u112_div {
+#u57_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -427,7 +428,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u112 {
+#u57 {
   border-width:0px;
   position:absolute;
   left:935px;
@@ -439,19 +440,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u112 .text {
+#u57 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u112_text {
+#u57_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u113_div {
+#u58_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -469,7 +470,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u113 {
+#u58 {
   border-width:0px;
   position:absolute;
   left:948px;
@@ -481,19 +482,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u113 .text {
+#u58 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u113_text {
+#u58_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u114_div {
+#u59_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -512,7 +513,7 @@
   font-style:normal;
   text-align:right;
 }
-#u114 {
+#u59 {
   border-width:0px;
   position:absolute;
   left:884px;
@@ -525,19 +526,19 @@
   font-style:normal;
   text-align:right;
 }
-#u114 .text {
+#u59 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u114_text {
+#u59_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u115_div {
+#u60_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -556,7 +557,7 @@
   font-style:normal;
   text-align:center;
 }
-#u115 {
+#u60 {
   border-width:0px;
   position:absolute;
   left:429px;
@@ -569,19 +570,19 @@
   font-style:normal;
   text-align:center;
 }
-#u115 .text {
+#u60 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u115_text {
+#u60_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u116 {
+#u61 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -589,7 +590,7 @@
   width:0px;
   height:0px;
 }
-#u117_img {
+#u62_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -597,7 +598,7 @@
   width:170px;
   height:170px;
 }
-#u117 {
+#u62 {
   border-width:0px;
   position:absolute;
   left:110px;
@@ -606,20 +607,20 @@
   height:170px;
   display:flex;
 }
-#u117 .text {
+#u62 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u117_text {
+#u62_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u118_div {
+#u63_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -638,7 +639,7 @@
   font-style:normal;
   text-align:center;
 }
-#u118 {
+#u63 {
   border-width:0px;
   position:absolute;
   left:145px;
@@ -651,19 +652,19 @@
   font-style:normal;
   text-align:center;
 }
-#u118 .text {
+#u63 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u118_text {
+#u63_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u119 {
+#u64 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -671,7 +672,7 @@
   width:0px;
   height:0px;
 }
-#u120_img {
+#u65_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -679,7 +680,7 @@
   width:170px;
   height:170px;
 }
-#u120 {
+#u65 {
   border-width:0px;
   position:absolute;
   left:744px;
@@ -688,20 +689,20 @@
   height:170px;
   display:flex;
 }
-#u120 .text {
+#u65 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u120_text {
+#u65_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u121_div {
+#u66_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -720,7 +721,7 @@
   font-style:normal;
   text-align:center;
 }
-#u121 {
+#u66 {
   border-width:0px;
   position:absolute;
   left:776px;
@@ -733,19 +734,19 @@
   font-style:normal;
   text-align:center;
 }
-#u121 .text {
+#u66 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u121_text {
+#u66_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u122 {
+#u67 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -753,7 +754,7 @@
   width:0px;
   height:0px;
 }
-#u123_img {
+#u68_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -761,7 +762,7 @@
   width:170px;
   height:170px;
 }
-#u123 {
+#u68 {
   border-width:0px;
   position:absolute;
   left:427px;
@@ -770,20 +771,20 @@
   height:170px;
   display:flex;
 }
-#u123 .text {
+#u68 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u123_text {
+#u68_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u124_div {
+#u69_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -802,7 +803,7 @@
   font-style:normal;
   text-align:center;
 }
-#u124 {
+#u69 {
   border-width:0px;
   position:absolute;
   left:466px;
@@ -815,19 +816,19 @@
   font-style:normal;
   text-align:center;
 }
-#u124 .text {
+#u69 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u124_text {
+#u69_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u125 {
+#u70 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -835,7 +836,7 @@
   width:0px;
   height:0px;
 }
-#u126_img {
+#u71_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -843,7 +844,7 @@
   width:170px;
   height:170px;
 }
-#u126 {
+#u71 {
   border-width:0px;
   position:absolute;
   left:110px;
@@ -852,20 +853,20 @@
   height:170px;
   display:flex;
 }
-#u126 .text {
+#u71 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u126_text {
+#u71_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u127_div {
+#u72_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -884,7 +885,7 @@
   font-style:normal;
   text-align:center;
 }
-#u127 {
+#u72 {
   border-width:0px;
   position:absolute;
   left:113px;
@@ -897,19 +898,19 @@
   font-style:normal;
   text-align:center;
 }
-#u127 .text {
+#u72 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u127_text {
+#u72_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u128 {
+#u73 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -917,7 +918,7 @@
   width:0px;
   height:0px;
 }
-#u129_img {
+#u74_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -925,7 +926,7 @@
   width:170px;
   height:170px;
 }
-#u129 {
+#u74 {
   border-width:0px;
   position:absolute;
   left:744px;
@@ -934,20 +935,20 @@
   height:170px;
   display:flex;
 }
-#u129 .text {
+#u74 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u129_text {
+#u74_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u130_div {
+#u75_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -966,7 +967,7 @@
   font-style:normal;
   text-align:center;
 }
-#u130 {
+#u75 {
   border-width:0px;
   position:absolute;
   left:765px;
@@ -979,19 +980,19 @@
   font-style:normal;
   text-align:center;
 }
-#u130 .text {
+#u75 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u130_text {
+#u75_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u131 {
+#u76 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -999,7 +1000,7 @@
   width:0px;
   height:0px;
 }
-#u132_img {
+#u77_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1007,7 +1008,7 @@
   width:170px;
   height:170px;
 }
-#u132 {
+#u77 {
   border-width:0px;
   position:absolute;
   left:427px;
@@ -1016,20 +1017,20 @@
   height:170px;
   display:flex;
 }
-#u132 .text {
+#u77 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u132_text {
+#u77_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u133_div {
+#u78_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1048,7 +1049,7 @@
   font-style:normal;
   text-align:center;
 }
-#u133 {
+#u78 {
   border-width:0px;
   position:absolute;
   left:432px;
@@ -1061,19 +1062,19 @@
   font-style:normal;
   text-align:center;
 }
-#u133 .text {
+#u78 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u133_text {
+#u78_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u134 {
+#u79 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1081,7 +1082,7 @@
   width:0px;
   height:0px;
 }
-#u135_img {
+#u80_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1089,7 +1090,7 @@
   width:170px;
   height:170px;
 }
-#u135 {
+#u80 {
   border-width:0px;
   position:absolute;
   left:110px;
@@ -1098,20 +1099,20 @@
   height:170px;
   display:flex;
 }
-#u135 .text {
+#u80 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u135_text {
+#u80_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u136_div {
+#u81_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1130,7 +1131,7 @@
   font-style:normal;
   text-align:center;
 }
-#u136 {
+#u81 {
   border-width:0px;
   position:absolute;
   left:119px;
@@ -1143,19 +1144,19 @@
   font-style:normal;
   text-align:center;
 }
-#u136 .text {
+#u81 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u136_text {
+#u81_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u137 {
+#u82 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1163,7 +1164,7 @@
   width:0px;
   height:0px;
 }
-#u138_img {
+#u83_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1171,7 +1172,7 @@
   width:170px;
   height:170px;
 }
-#u138 {
+#u83 {
   border-width:0px;
   position:absolute;
   left:744px;
@@ -1180,20 +1181,20 @@
   height:170px;
   display:flex;
 }
-#u138 .text {
+#u83 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u138_text {
+#u83_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u139_div {
+#u84_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1212,7 +1213,7 @@
   font-style:normal;
   text-align:center;
 }
-#u139 {
+#u84 {
   border-width:0px;
   position:absolute;
   left:793px;
@@ -1225,19 +1226,19 @@
   font-style:normal;
   text-align:center;
 }
-#u139 .text {
+#u84 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u139_text {
+#u84_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u140 {
+#u85 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1245,7 +1246,7 @@
   width:0px;
   height:0px;
 }
-#u141_img {
+#u86_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1253,7 +1254,7 @@
   width:170px;
   height:170px;
 }
-#u141 {
+#u86 {
   border-width:0px;
   position:absolute;
   left:427px;
@@ -1262,20 +1263,20 @@
   height:170px;
   display:flex;
 }
-#u141 .text {
+#u86 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u141_text {
+#u86_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u142_div {
+#u87_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1294,7 +1295,7 @@
   font-style:normal;
   text-align:center;
 }
-#u142 {
+#u87 {
   border-width:0px;
   position:absolute;
   left:436px;
@@ -1307,14 +1308,14 @@
   font-style:normal;
   text-align:center;
 }
-#u142 .text {
+#u87 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u142_text {
+#u87_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
