--- a/files/ultimate/styles.css
+++ b/files/ultimate/styles.css
@@ -16,18 +16,19 @@
   position:absolute;
   z-index:0;
 }
-#u255 {
+#u200 {
   position:fixed;
   left:50%;
   margin-left:-512px;
   top:0px;
 }
-#u255_state0 {
+#u200_state0 {
   position:relative;
   left:0px;
   top:0px;
   width:1024px;
   height:50px;
+  background-color:rgba(215, 215, 215, 1);
   background-image:none;
   border:none;
   border-radius:0px;
@@ -35,7 +36,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u255_state0_content {
+#u200_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -43,7 +44,7 @@
   width:1px;
   height:1px;
 }
-#u256_div {
+#u201_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -58,7 +59,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u256 {
+#u201 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -67,20 +68,20 @@
   height:50px;
   display:flex;
 }
-#u256 .text {
+#u201 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u256_text {
+#u201_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u257_img {
+#u202_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -88,7 +89,7 @@
   width:68px;
   height:35px;
 }
-#u257 {
+#u202 {
   border-width:0px;
   position:absolute;
   left:15px;
@@ -97,20 +98,20 @@
   height:35px;
   display:flex;
 }
-#u257 .text {
+#u202 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u257_text {
+#u202_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u258_div {
+#u203_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -129,7 +130,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u258 {
+#u203 {
   border-width:0px;
   position:absolute;
   left:934px;
@@ -142,19 +143,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u258 .text {
+#u203 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u258_text {
+#u203_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u259_div {
+#u204_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -173,7 +174,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u259 {
+#u204 {
   border-width:0px;
   position:absolute;
   left:671px;
@@ -186,19 +187,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u259 .text {
+#u204 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u259_text {
+#u204_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u260_div {
+#u205_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -217,7 +218,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u260 {
+#u205 {
   border-width:0px;
   position:absolute;
   left:753px;
@@ -230,19 +231,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u260 .text {
+#u205 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u260_text {
+#u205_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u261_div {
+#u206_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -261,7 +262,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u261 {
+#u206 {
   border-width:0px;
   position:absolute;
   left:817px;
@@ -274,19 +275,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u261 .text {
+#u206 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u261_text {
+#u206_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u262_div {
+#u207_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -305,7 +306,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u262 {
+#u207 {
   border-width:0px;
   position:absolute;
   left:876px;
@@ -318,19 +319,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u262 .text {
+#u207 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u262_text {
+#u207_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u264_div {
+#u209_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -345,7 +346,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u264 {
+#u209 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -354,20 +355,20 @@
   height:100px;
   display:flex;
 }
-#u264 .text {
+#u209 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u264_text {
+#u209_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u265_div {
+#u210_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -385,7 +386,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u265 {
+#u210 {
   border-width:0px;
   position:absolute;
   left:20px;
@@ -397,19 +398,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u265 .text {
+#u210 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u265_text {
+#u210_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u266_div {
+#u211_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -427,7 +428,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u266 {
+#u211 {
   border-width:0px;
   position:absolute;
   left:935px;
@@ -439,19 +440,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u266 .text {
+#u211 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u266_text {
+#u211_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u267_div {
+#u212_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -469,7 +470,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u267 {
+#u212 {
   border-width:0px;
   position:absolute;
   left:948px;
@@ -481,19 +482,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u267 .text {
+#u212 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u267_text {
+#u212_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u268_div {
+#u213_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -512,7 +513,7 @@
   font-style:normal;
   text-align:right;
 }
-#u268 {
+#u213 {
   border-width:0px;
   position:absolute;
   left:884px;
@@ -525,19 +526,19 @@
   font-style:normal;
   text-align:right;
 }
-#u268 .text {
+#u213 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u268_text {
+#u213_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u269_div {
+#u214_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -556,7 +557,7 @@
   font-style:normal;
   text-align:center;
 }
-#u269 {
+#u214 {
   border-width:0px;
   position:absolute;
   left:254px;
@@ -569,14 +570,14 @@
   font-style:normal;
   text-align:center;
 }
-#u269 .text {
+#u214 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u269_text {
+#u214_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
