--- a/files/hearthstone/styles.css
+++ b/files/hearthstone/styles.css
@@ -16,18 +16,19 @@
   position:absolute;
   z-index:0;
 }
-#u176 {
+#u121 {
   position:fixed;
   left:50%;
   margin-left:-512px;
   top:0px;
 }
-#u176_state0 {
+#u121_state0 {
   position:relative;
   left:0px;
   top:0px;
   width:1024px;
   height:50px;
+  background-color:rgba(215, 215, 215, 1);
   background-image:none;
   border:none;
   border-radius:0px;
@@ -35,7 +36,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u176_state0_content {
+#u121_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -43,7 +44,7 @@
   width:1px;
   height:1px;
 }
-#u177_div {
+#u122_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -58,7 +59,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u177 {
+#u122 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -67,20 +68,20 @@
   height:50px;
   display:flex;
 }
-#u177 .text {
+#u122 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u177_text {
+#u122_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u178_img {
+#u123_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -88,7 +89,7 @@
   width:68px;
   height:35px;
 }
-#u178 {
+#u123 {
   border-width:0px;
   position:absolute;
   left:15px;
@@ -97,20 +98,20 @@
   height:35px;
   display:flex;
 }
-#u178 .text {
+#u123 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u178_text {
+#u123_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u179_div {
+#u124_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -129,7 +130,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u179 {
+#u124 {
   border-width:0px;
   position:absolute;
   left:934px;
@@ -142,19 +143,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u179 .text {
+#u124 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u179_text {
+#u124_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u180_div {
+#u125_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -173,7 +174,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u180 {
+#u125 {
   border-width:0px;
   position:absolute;
   left:671px;
@@ -186,19 +187,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u180 .text {
+#u125 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u180_text {
+#u125_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u181_div {
+#u126_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -217,7 +218,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u181 {
+#u126 {
   border-width:0px;
   position:absolute;
   left:753px;
@@ -230,19 +231,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u181 .text {
+#u126 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u181_text {
+#u126_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u182_div {
+#u127_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -261,7 +262,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u182 {
+#u127 {
   border-width:0px;
   position:absolute;
   left:817px;
@@ -274,19 +275,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u182 .text {
+#u127 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u182_text {
+#u127_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u183_div {
+#u128_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -305,7 +306,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u183 {
+#u128 {
   border-width:0px;
   position:absolute;
   left:876px;
@@ -318,19 +319,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u183 .text {
+#u128 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u183_text {
+#u128_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u185_div {
+#u130_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -345,7 +346,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u185 {
+#u130 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -354,20 +355,20 @@
   height:100px;
   display:flex;
 }
-#u185 .text {
+#u130 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u185_text {
+#u130_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u186_div {
+#u131_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -385,7 +386,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u186 {
+#u131 {
   border-width:0px;
   position:absolute;
   left:20px;
@@ -397,19 +398,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u186 .text {
+#u131 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u186_text {
+#u131_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u187_div {
+#u132_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -427,7 +428,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u187 {
+#u132 {
   border-width:0px;
   position:absolute;
   left:935px;
@@ -439,19 +440,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u187 .text {
+#u132 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u187_text {
+#u132_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u188_div {
+#u133_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -469,7 +470,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u188 {
+#u133 {
   border-width:0px;
   position:absolute;
   left:948px;
@@ -481,19 +482,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u188 .text {
+#u133 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u188_text {
+#u133_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u189_div {
+#u134_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -512,7 +513,7 @@
   font-style:normal;
   text-align:right;
 }
-#u189 {
+#u134 {
   border-width:0px;
   position:absolute;
   left:884px;
@@ -525,19 +526,19 @@
   font-style:normal;
   text-align:right;
 }
-#u189 .text {
+#u134 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u189_text {
+#u134_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u190_div {
+#u135_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -556,7 +557,7 @@
   font-style:normal;
   text-align:center;
 }
-#u190 {
+#u135 {
   border-width:0px;
   position:absolute;
   left:331px;
@@ -569,14 +570,14 @@
   font-style:normal;
   text-align:center;
 }
-#u190 .text {
+#u135 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u190_text {
+#u135_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
