--- a/files/home/styles.css
+++ b/files/home/styles.css
@@ -28,6 +28,7 @@
   top:0px;
   width:1024px;
   height:50px;
+  background-color:rgba(215, 215, 215, 1);
   background-image:none;
   border:none;
   border-radius:0px;
